# python-template

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  README_project.md  justfile  pyproject.toml  setup.py
.github/workflows/: build.yml  release.yml
project_name/: __init__.py  my_module.py
python_project/: __init__.py
test/unit/: conftest.py  test_my_module.py
